--- a/index.html
+++ b/index.html
@@ -20,7 +20,32 @@
     />
   </head>
   <body class="main-content">
-    <header class="section sec1 header active" id="home"></header>
+    <header class="section sec1 header active" id="home">
+      <div class="header-content">
+        <div class="left-header">
+          <div class="h-shape"></div>
+          <div class="image">
+            <img src="./img/hero.png" alt="My Mugshot" />
+          </div>
+        </div>
+        <div class="right-header">
+          <h1 class="name">This is <span>Mohammed Nizam</span></h1>
+          <p>
+            A self-motivated Software Engineer with the ability to be proactive
+            with project execution. My key responsibilities include solving
+            technical problems, collaborating with the management, selecting the
+            right development environment, interacting with stakeholders, and
+            making sure projects are completed in time.
+          </p>
+          <div class="btn-con">
+            <a href="#" class="main-btn">
+              <span class="btn-text">Download CV</span>
+              <span class="btn-icon"><i class="fas fa-download"></i></span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
     <main>
       <section class="section sec2 about" id="about"></section>
       <section class="section sec3 portfolio" id="portfolio"></section>
